fixed overflow on aboutme page

--- a/components/AboutMe/Header/AboutHeader.module.css
+++ b/components/AboutMe/Header/AboutHeader.module.css
@@ -10,6 +10,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	z-index: 0;
+	overflow: hidden;
 }
 .shadow {
 	position: absolute;
