--- a/components/AboutMe/Roadmap/Roadmap.module.css
+++ b/components/AboutMe/Roadmap/Roadmap.module.css
@@ -1,7 +1,7 @@
 .roadmap {
 	display: flex;
 	justify-content: center;
-
 	align-items: center;
 	flex-direction: column;
+	overflow: hidden;
 }
